...
    let headerId = "headerId"
    
    override func viewDidLoad() {
        super.viewDidLoad()
        
        // Text at top
        navigationItem.title = "Question"
        
        // The back button color/text
        navigationController?.navigationBar.tintColor = UIColor.white
        navigationItem.backBarButtonItem = UIBarButtonItem(title: "Return", style: .plain, target:nil, action: nil)
        
        // Register the answercell class in creating new table cells. Assign this an id value of 'cellID'
...
